--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,14 @@
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> miso-invaders </title>
-    <script type="text/javascript" src="all.js" async defer> </script>
   </head>
   <body>
+    <h1> miso-invaders </h1>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
 
