--- a/static/index.html
+++ b/static/index.html
@@ -1,14 +1,12 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> miso-invaders </title>
+    <title> 🍜 👾 miso-invaders </title>
   </head>
   <body>
-    <h1> miso-invaders </h1>
+    <h1 style="font-family: monospace;"> 🍜 👾 miso-invaders </h1>
     <script src="index.js" type="module"></script>
   </body>
 </html>
-
